Fix dataset len bug

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,6 +226,7 @@
         "                    else: # some reviews do not have associated text; unwind (remove) their ratings for each aspect\n",
         "                        for aspect_ratings in self._aspect_ratings:\n",
         "                            aspect_ratings.pop()\n",
+        "                        self._len -= 1\n",
         "\n",
         "    def _post_process(self):\n",
         "        nlp = spacy.util.get_lang_class('en')()\n",
@@ -257,7 +258,7 @@
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -293,7 +294,7 @@
         "id": "B_QTo-xBCelp",
         "outputId": "144895d3-8dbc-46ed-d73e-713e29a34558"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +335,7 @@
         },
         "outputId": "2b2332fe-3fff-441c-eef4-89ad61431ebf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +360,7 @@
         "id": "RZ0p4rxp2UJE",
         "outputId": "0c621f27-a74a-480f-ac69-0bb70a240385"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +404,7 @@
         "            self.theta[aspect_ids, :] = 1\n",
         "        self.theta.grad = torch.zeros_like(self.theta)\n",
         "\n",
-        "        aspect_rating_count = [6, 11, 6, 11, 21]\n",
+        "        aspect_rating_count = [6, 11, 6, 11, 21] # TODO remove\n",
         "\n",
         "        # introduce separate phi for each aspect\n",
         "        self.phis = [torch.rand((word_count, aspect_rating_count[i]), requires_grad=True) for i in range(self.ds.aspect_count)]\n",
@@ -504,7 +505,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
