Use GPU if available

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -49,8 +49,8 @@
     {
       "cell_type": "code",
       "source": [
-        "dev = 'cuda' if torch.cuda.is_available else 'cpu' # not used now TODO\n",
-        "# dev = 'cpu'\n",
+        "import torch\n",
+        "dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
         "print(f'dev = {dev}')"
       ],
       "metadata": {
@@ -58,9 +58,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7e9f4527-36cf-4919-ac89-480469091ba3"
+        "outputId": "b87c1713-1de1-4794-a66e-6314a2cb9f2a"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -292,9 +292,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B_QTo-xBCelp",
-        "outputId": "144895d3-8dbc-46ed-d73e-713e29a34558"
+        "outputId": "25791d6c-8a3f-4950-82bd-9942660f4989"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j\n",
             "To: /content/ratebeer.pickle\n",
-            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  1%|1         | 4.72M/322M [00:00<00:12, 24.9MB/s]\r  5%|5         | 17.3M/322M [00:00<00:09, 31.0MB/s]\r  8%|7         | 25.7M/322M [00:00<00:08, 34.2MB/s]\r 11%|#         | 34.1M/322M [00:00<00:07, 36.8MB/s]\r 13%|#3        | 42.5M/322M [00:01<00:08, 34.3MB/s]\r 18%|#8        | 59.2M/322M [00:01<00:06, 41.5MB/s]\r 24%|##3       | 76.0M/322M [00:01<00:05, 47.4MB/s]\r 29%|##8       | 92.8M/322M [00:01<00:04, 54.4MB/s]\r 34%|###4      | 110M/322M [00:01<00:03, 61.1MB/s] \r 39%|###8      | 125M/322M [00:01<00:02, 74.2MB/s]\r 42%|####1     | 134M/322M [00:02<00:02, 72.8MB/s]\r 44%|####4     | 143M/322M [00:02<00:02, 68.6MB/s]\r 50%|####9     | 160M/322M [00:02<00:02, 73.9MB/s]\r 52%|#####2    | 168M/322M [00:02<00:02, 76.5MB/s]\r 57%|#####7    | 185M/322M [00:02<00:01, 87.1MB/s]\r 64%|######3   | 204M/322M [00:02<00:01, 104MB/s] \r 67%|######7   | 217M/322M [00:02<00:01, 104MB/s]\r 73%|#######2  | 234M/322M [00:02<00:00, 118MB/s]\r 77%|#######6  | 247M/322M [00:03<00:00, 102MB/s]\r 81%|########  | 261M/322M [00:03<00:00, 109MB/s]\r 86%|########5 | 276M/322M [00:03<00:00, 119MB/s]\r 90%|########9 | 289M/322M [00:03<00:00, 113MB/s]\r 94%|#########3| 301M/322M [00:03<00:00, 116MB/s]\r 99%|#########8| 317M/322M [00:03<00:00, 125MB/s]\r100%|##########| 322M/322M [00:03<00:00, 85.5MB/s]\n"
+            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  1%|1         | 4.72M/322M [00:00<00:11, 27.7MB/s]\r  7%|7         | 23.1M/322M [00:00<00:08, 37.1MB/s]\r 11%|#         | 34.1M/322M [00:00<00:06, 46.0MB/s]\r 14%|#4        | 45.1M/322M [00:00<00:04, 55.6MB/s]\r 20%|#9        | 64.0M/322M [00:00<00:03, 70.5MB/s]\r 25%|##4       | 79.2M/322M [00:00<00:02, 83.9MB/s]\r 29%|##8       | 91.8M/322M [00:00<00:02, 92.4MB/s]\r 35%|###4      | 111M/322M [00:00<00:01, 109MB/s]  \r 39%|###9      | 126M/322M [00:01<00:01, 102MB/s]\r 43%|####3     | 139M/322M [00:01<00:01, 103MB/s]\r 49%|####9     | 158M/322M [00:01<00:01, 119MB/s]\r 55%|#####4    | 177M/322M [00:01<00:01, 129MB/s]\r 59%|#####9    | 191M/322M [00:01<00:01, 129MB/s]\r 65%|######5   | 210M/322M [00:01<00:00, 132MB/s]\r 72%|#######1  | 231M/322M [00:01<00:00, 148MB/s]\r 77%|#######6  | 247M/322M [00:01<00:00, 130MB/s]\r 85%|########4 | 272M/322M [00:02<00:00, 151MB/s]\r 91%|######### | 292M/322M [00:02<00:00, 162MB/s]\r 96%|#########6| 310M/322M [00:02<00:00, 150MB/s]\r100%|##########| 322M/322M [00:02<00:00, 139MB/s]\n"
           ]
         }
       ]
@@ -333,9 +333,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2b2332fe-3fff-441c-eef4-89ad61431ebf"
+        "outputId": "076bd986-e3c4-47b8-c699-5b7e7b276d0c"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +394,7 @@
         "\n",
         "    def init_weights(self):\n",
         "        word_count = len(self.ds.vocab.get_itos())\n",
-        "        self.theta = torch.rand((word_count, self.ds.aspect_count), requires_grad=True)\n",
+        "        self.theta = torch.rand((word_count, self.ds.aspect_count), requires_grad=True).to(dev)\n",
         "        # if dev == 'cuda': # TODO\n",
         "        #     theta = theta\n",
         "        with torch.no_grad():\n",
@@ -407,7 +407,7 @@
         "        aspect_rating_count = [6, 11, 6, 11, 21] # TODO remove\n",
         "\n",
         "        # introduce separate phi for each aspect\n",
-        "        self.phis = [torch.rand((word_count, aspect_rating_count[i]), requires_grad=True) for i in range(self.ds.aspect_count)]\n",
+        "        self.phis = [torch.rand((word_count, aspect_rating_count[i]), requires_grad=True).to(dev) for i in range(self.ds.aspect_count)]\n",
         "\n",
         "        # if dev == 'cuda': # TODO\n",
         "        #     phis = [phi.cuda() for phi in phis]\n",
@@ -481,6 +481,7 @@
         "                        self.theta -= 0.00001 * self.theta.grad\n",
         "                        self.phis = [phi - 0.00001 * phi.grad if phi.grad != None else phi for phi in self.phis]\n",
         "                        if 0 == i % 50000:\n",
+        "                            ic(i)\n",
         "                            ic(regularization_loss)\n",
         "                            ic(ll_loss)\n",
         "                            ic(loss)\n",
@@ -505,17 +506,27 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model = Model(rb)\n",
-        "model.train()"
+        "model = Model(rb)"
       ],
       "metadata": {
         "id": "-BbREMkrBEph"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.train()"
+      ],
+      "metadata": {
+        "id": "iGr0C7WLqsu0"
       },
       "execution_count": null,
       "outputs": []
@@ -526,7 +537,7 @@
         ""
       ],
       "metadata": {
-        "id": "iGr0C7WLqsu0"
+        "id": "REUuU29wC18G"
       },
       "execution_count": null,
       "outputs": []
