--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -58,9 +58,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "979531b0-c76d-4713-e8b7-4b284b677afa"
+        "outputId": "96ce1c26-d8b4-4cf6-f91b-7cf151b90953"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -336,9 +336,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B_QTo-xBCelp",
-        "outputId": "f7b2e73b-569b-4a17-dcc9-b7d68faac386"
+        "outputId": "7062b0cc-7f73-4bd2-c9b9-7e2e35156e15"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j\n",
             "To: /content/ratebeer.pickle\n",
-            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  1%|1         | 4.72M/322M [00:00<00:06, 46.7MB/s]\r  5%|5         | 17.3M/322M [00:00<00:05, 57.3MB/s]\r 13%|#3        | 42.5M/322M [00:00<00:03, 74.5MB/s]\r 19%|#9        | 61.9M/322M [00:00<00:02, 91.3MB/s]\r 26%|##6       | 84.4M/322M [00:00<00:02, 108MB/s] \r 31%|###       | 99.6M/322M [00:00<00:01, 116MB/s]\r 38%|###8      | 123M/322M [00:00<00:01, 136MB/s] \r 43%|####3     | 140M/322M [00:00<00:01, 138MB/s]\r 49%|####8     | 157M/322M [00:00<00:01, 147MB/s]\r 56%|#####6    | 181M/322M [00:01<00:00, 165MB/s]\r 63%|######2   | 202M/322M [00:01<00:00, 176MB/s]\r 71%|#######   | 227M/322M [00:01<00:00, 164MB/s]\r 77%|#######6  | 246M/322M [00:01<00:00, 172MB/s]\r 82%|########2 | 265M/322M [00:01<00:00, 175MB/s]\r 89%|########8 | 285M/322M [00:01<00:00, 182MB/s]\r 94%|#########4| 304M/322M [00:01<00:00, 178MB/s]\r100%|##########| 322M/322M [00:01<00:00, 167MB/s]\n"
+            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  1%|1         | 4.72M/322M [00:00<00:23, 13.7MB/s]\r  6%|5         | 18.9M/322M [00:00<00:16, 18.8MB/s]\r 11%|#         | 34.1M/322M [00:00<00:12, 22.8MB/s]\r 16%|#6        | 53.0M/322M [00:00<00:08, 31.0MB/s]\r 21%|##1       | 67.6M/322M [00:01<00:07, 33.9MB/s]\r 27%|##6       | 85.5M/322M [00:01<00:05, 44.7MB/s]\r 31%|###1      | 101M/322M [00:01<00:04, 46.5MB/s] \r 37%|###6      | 118M/322M [00:01<00:03, 59.3MB/s]\r 42%|####1     | 135M/322M [00:02<00:03, 56.6MB/s]\r 48%|####8     | 156M/322M [00:02<00:02, 72.4MB/s]\r 52%|#####2    | 169M/322M [00:02<00:02, 60.1MB/s]\r 59%|#####9    | 191M/322M [00:02<00:01, 77.0MB/s]\r 64%|######3   | 206M/322M [00:02<00:01, 63.4MB/s]\r 70%|#######   | 225M/322M [00:02<00:01, 79.6MB/s]\r 74%|#######4  | 240M/322M [00:03<00:01, 69.4MB/s]\r 78%|#######8  | 251M/322M [00:03<00:00, 78.6MB/s]\r 83%|########2 | 266M/322M [00:03<00:00, 91.7MB/s]\r 87%|########6 | 279M/322M [00:03<00:00, 86.0MB/s]\r 92%|#########1| 295M/322M [00:03<00:00, 99.1MB/s]\r 95%|#########5| 307M/322M [00:03<00:00, 103MB/s] \r 99%|#########9| 319M/322M [00:03<00:00, 104MB/s]\r100%|##########| 322M/322M [00:03<00:00, 80.9MB/s]\n"
           ]
         }
       ]
@@ -358,7 +358,7 @@
         "import pickle # serialize lib\n",
         "from google.colab import drive\n",
         "\n",
-        "# drive.mount('/drive')\n",
+        "drive.mount('/drive')\n",
         "\n",
         "DATASET_PICKLE='/content/ratebeer.pickle'\n",
         "RECREATE_PICKLE = False\n",
@@ -373,10 +373,22 @@
         "        rb = pickle.load(f)"
       ],
       "metadata": {
-        "id": "N5zmSYDBCg4B"
+        "id": "N5zmSYDBCg4B",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5982743b-0900-4fdc-f39c-537b907526ad"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -418,6 +430,7 @@
       "source": [
         "from torch.utils.data import random_split\n",
         "import datetime\n",
+        "from scipy.optimize import linear_sum_assignment\n",
         "\n",
         "class Model():\n",
         "    def __init__(self, dataset):\n",
@@ -444,10 +457,16 @@
         "        for phi in self.phis:\n",
         "            phi.grad = torch.zeros_like(phi) # otherwise we would got \"'NoneType' object...\" in the first train iteration\n",
         "    \n",
-        "    def sentence_aspects_likelihood_theta(self, sen_ids):\n",
+        "    def sen_words_thetas(self, sen_ids):\n",
+        "        \"\"\"\n",
+        "        TODO comment sentence_aspects_likelihood_theta\n",
+        "        \"\"\"\n",
         "        return self.theta[sen_ids]\n",
         "\n",
-        "    def sentence_aspects_likelihood_phi(self, sen_ids):\n",
+        "    def sen_words_phis(self, sen_ids):\n",
+        "        \"\"\"\n",
+        "        TODO comment sentence_aspects_likelihood_phi\n",
+        "        \"\"\"\n",
         "        phi_scores = [self.phis[aspect_idx][sen_ids, :] for aspect_idx in range(self.ds.aspect_count)]\n",
         "        return phi_scores\n",
         "    \n",
@@ -460,10 +479,14 @@
         "        self.phis  = torch.load(f'src_path-phis')\n",
         "    \n",
         "\n",
-        "    # def linear_assignement(self, rev_sen, rev_scores):\n",
-        "    #     graph = np.empty(shape=(len(rev_sen, self.ds.aspect_count)))\n",
+        "    # def linear_assignement(self, rev_sens, rev_scores):\n",
+        "    #     costs = np.zero(shape=(len(rev_sens), self.ds.aspect_count))\n",
         "\n",
-        "    #     for k in range(self.ds.aspect_count)\n",
+        "    #     for k in range(self.ds.aspect_count):\n",
+        "    #         # \n",
+        "    #     linear_sum_assignment(costs)\n",
+        "    \n",
+        "    \n",
         "    # def sentence_likelihood(self, sen_ids): # TODO remove?\n",
         "    #   pass\n",
         "    \n",
@@ -478,20 +501,26 @@
         "            for epoch in range(epoch_count):\n",
         "                ic(epoch)\n",
         "                for i, (review_sentences, review_aspects_scores) in enumerate(tqdm(self.train_ds)):\n",
+        "                    # [phis for each sentence] TODO\n",
+        "                    # [thetas for each sentence] TODO\n",
         "                    sentence_ll_losses = []\n",
         "                    for sen_ids in review_sentences:\n",
-        "                        theta_scores = self.sentence_aspects_likelihood_theta(sen_ids)\n",
+        "                        thetas = self.sen_words_thetas(sen_ids)\n",
+        "                        phis = self.sen_words_phis(sen_ids)\n",
         "\n",
-        "                        ex = (list((self.sentence_aspects_likelihood_phi(sen_ids)[i][:, review_aspects_scores[i]]).sum() for i in range(self.ds.aspect_count)))\n",
-        "                        ex = torch.tensor(ex).to(dev)\n",
+        "                        # (most likely) aspect assignment (5)\n",
+        "                        phi_score_aa = (list((phis[i][:, review_aspects_scores[i]]).sum() for i in range(self.ds.aspect_count)))\n",
+        "                        phi_score_aa = torch.tensor(ex).to(dev)\n",
+        "                        theta_score_aa = thetas.sum(dim=0) # sum across words, keep aspects dim\n",
         "\n",
-        "                        aspect_pred = int(torch.argmax(torch.nn.functional.softmax(theta_scores.sum(0) + ex, dim=-1)).item())\n",
+        "                        aspect_pred = int(torch.argmax(torch.nn.functional.softmax(theta_score_aa + phi_score_aa, dim=-1)).item())\n",
         "\n",
+        "                        # sentence likelihood (6)\n",
         "                        aspect_rating = review_aspects_scores[aspect_pred]\n",
-        "                        # ic(aspect_rating)\n",
-        "                        phi_score = self.sentence_aspects_likelihood_phi(sen_ids)[aspect_pred][:, aspect_rating]\n",
+        "                        theta_score_ll = thetas[:, aspect_pred].sum()\n",
+        "                        phi_score_ll = phis[aspect_pred][:, aspect_rating].sum()\n",
         "\n",
-        "                        ll = torch.log(theta_scores[:, aspect_pred].sum() + phi_score.sum())\n",
+        "                        ll = torch.log(theta_score_ll + phi_score_ll)\n",
         "                        sentence_ll_losses.append(-ll)\n",
         "\n",
         "                        if 0 == i % 50000:\n",
@@ -534,7 +563,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 28,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -545,7 +574,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 29,
+      "execution_count": 22,
       "outputs": []
     },
     {
