--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -510,7 +510,7 @@
         "\n",
         "                        # (most likely) aspect assignment (5)\n",
         "                        phi_score_aa = (list((phis[i][:, review_aspects_scores[i]]).sum() for i in range(self.ds.aspect_count)))\n",
-        "                        phi_score_aa = torch.tensor(ex).to(dev)\n",
+        "                        phi_score_aa = torch.tensor(phi_score_aa).to(dev)\n",
         "                        theta_score_aa = thetas.sum(dim=0) # sum across words, keep aspects dim\n",
         "\n",
         "                        aspect_pred = int(torch.argmax(torch.nn.functional.softmax(theta_score_aa + phi_score_aa, dim=-1)).item())\n",
@@ -563,7 +563,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": []
     },
     {
