Move fetching weights out of sentence loop

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -58,15 +57,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96ce1c26-d8b4-4cf6-f91b-7cf151b90953"
+        "outputId": "db677126-945f-4b3e-befe-d70aa46753de"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "dev = cuda\n"
+            "dev = cpu\n"
           ]
         }
       ]
@@ -80,7 +79,7 @@
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -302,7 +301,7 @@
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -336,9 +335,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B_QTo-xBCelp",
-        "outputId": "7062b0cc-7f73-4bd2-c9b9-7e2e35156e15"
+        "outputId": "4ee4deb5-deb9-4740-a78e-f7af77123bc8"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +346,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j\n",
             "To: /content/ratebeer.pickle\n",
-            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  1%|1         | 4.72M/322M [00:00<00:23, 13.7MB/s]\r  6%|5         | 18.9M/322M [00:00<00:16, 18.8MB/s]\r 11%|#         | 34.1M/322M [00:00<00:12, 22.8MB/s]\r 16%|#6        | 53.0M/322M [00:00<00:08, 31.0MB/s]\r 21%|##1       | 67.6M/322M [00:01<00:07, 33.9MB/s]\r 27%|##6       | 85.5M/322M [00:01<00:05, 44.7MB/s]\r 31%|###1      | 101M/322M [00:01<00:04, 46.5MB/s] \r 37%|###6      | 118M/322M [00:01<00:03, 59.3MB/s]\r 42%|####1     | 135M/322M [00:02<00:03, 56.6MB/s]\r 48%|####8     | 156M/322M [00:02<00:02, 72.4MB/s]\r 52%|#####2    | 169M/322M [00:02<00:02, 60.1MB/s]\r 59%|#####9    | 191M/322M [00:02<00:01, 77.0MB/s]\r 64%|######3   | 206M/322M [00:02<00:01, 63.4MB/s]\r 70%|#######   | 225M/322M [00:02<00:01, 79.6MB/s]\r 74%|#######4  | 240M/322M [00:03<00:01, 69.4MB/s]\r 78%|#######8  | 251M/322M [00:03<00:00, 78.6MB/s]\r 83%|########2 | 266M/322M [00:03<00:00, 91.7MB/s]\r 87%|########6 | 279M/322M [00:03<00:00, 86.0MB/s]\r 92%|#########1| 295M/322M [00:03<00:00, 99.1MB/s]\r 95%|#########5| 307M/322M [00:03<00:00, 103MB/s] \r 99%|#########9| 319M/322M [00:03<00:00, 104MB/s]\r100%|##########| 322M/322M [00:03<00:00, 80.9MB/s]\n"
+            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  1%|1         | 4.72M/322M [00:00<00:22, 14.2MB/s]\r  7%|7         | 24.1M/322M [00:00<00:15, 19.6MB/s]\r 11%|#         | 34.1M/322M [00:00<00:12, 22.5MB/s]\r 16%|#5        | 50.9M/322M [00:00<00:08, 30.3MB/s]\r 21%|##1       | 67.6M/322M [00:01<00:07, 34.3MB/s]\r 28%|##8       | 90.2M/322M [00:01<00:05, 46.0MB/s]\r 32%|###1      | 102M/322M [00:01<00:05, 43.7MB/s] \r 38%|###8      | 124M/322M [00:01<00:03, 57.4MB/s]\r 43%|####2     | 137M/322M [00:01<00:03, 52.6MB/s]\r 49%|####8     | 156M/322M [00:02<00:02, 67.3MB/s]\r 53%|#####2    | 169M/322M [00:02<00:02, 57.2MB/s]\r 60%|######    | 193M/322M [00:02<00:01, 74.2MB/s]\r 65%|######4   | 208M/322M [00:02<00:01, 58.7MB/s]\r 68%|######8   | 220M/322M [00:03<00:01, 56.1MB/s]\r 73%|#######3  | 235M/322M [00:03<00:01, 62.1MB/s]\r 76%|#######6  | 245M/322M [00:03<00:01, 52.7MB/s]\r 81%|########  | 261M/322M [00:03<00:00, 65.7MB/s]\r 86%|########6 | 277M/322M [00:03<00:00, 72.4MB/s]\r 92%|#########2| 297M/322M [00:03<00:00, 89.4MB/s]\r 97%|#########6| 311M/322M [00:04<00:00, 82.3MB/s]\r100%|##########| 322M/322M [00:04<00:00, 77.8MB/s]\n"
           ]
         }
       ]
@@ -377,9 +376,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5982743b-0900-4fdc-f39c-537b907526ad"
+        "outputId": "5059cf21-9267-4d3b-d0a2-a8f90cdeabcc"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,18 +456,17 @@
         "        for phi in self.phis:\n",
         "            phi.grad = torch.zeros_like(phi) # otherwise we would got \"'NoneType' object...\" in the first train iteration\n",
         "    \n",
-        "    def sen_words_thetas(self, sen_ids):\n",
+        "    def rev_words_thetas(self, rev_sens_ids):\n",
         "        \"\"\"\n",
         "        TODO comment sentence_aspects_likelihood_theta\n",
         "        \"\"\"\n",
-        "        return self.theta[sen_ids]\n",
+        "        return [self.theta[sen_ids] for sen_ids in rev_sens_ids]\n",
         "\n",
-        "    def sen_words_phis(self, sen_ids):\n",
+        "    def rev_words_phis(self, rev_sens_ids):\n",
         "        \"\"\"\n",
         "        TODO comment sentence_aspects_likelihood_phi\n",
         "        \"\"\"\n",
-        "        phi_scores = [self.phis[aspect_idx][sen_ids, :] for aspect_idx in range(self.ds.aspect_count)]\n",
-        "        return phi_scores\n",
+        "        return [[self.phis[aspect_idx][sen_ids, :] for aspect_idx in range(self.ds.aspect_count)] for sen_ids in rev_sens_ids]\n",
         "    \n",
         "    def dump_weights(self, dest_dir='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/'):\n",
         "        torch.save(self.phis,  f'{dest_dir}{datetime.datetime.now()}-theta')\n",
@@ -500,25 +498,25 @@
         "        try:\n",
         "            for epoch in range(epoch_count):\n",
         "                ic(epoch)\n",
-        "                for i, (review_sentences, review_aspects_scores) in enumerate(tqdm(self.train_ds)):\n",
-        "                    # [phis for each sentence] TODO\n",
-        "                    # [thetas for each sentence] TODO\n",
+        "                for i, (rev_sents_ids, review_aspects_scores) in enumerate(tqdm(self.train_ds)):\n",
+        "                    rev_thetas = self.rev_words_thetas(rev_sents_ids)\n",
+        "                    rev_phis   = self.rev_words_phis(rev_sents_ids)\n",
         "                    sentence_ll_losses = []\n",
-        "                    for sen_ids in review_sentences:\n",
-        "                        thetas = self.sen_words_thetas(sen_ids)\n",
-        "                        phis = self.sen_words_phis(sen_ids)\n",
+        "                    for j in range(len(rev_sents_ids)):\n",
+        "                        sen_thetas = rev_thetas[j]\n",
+        "                        sen_phis   = rev_phis[j]\n",
         "\n",
         "                        # (most likely) aspect assignment (5)\n",
-        "                        phi_score_aa = (list((phis[i][:, review_aspects_scores[i]]).sum() for i in range(self.ds.aspect_count)))\n",
+        "                        phi_score_aa = (list((sen_phis[a][:, review_aspects_scores[a]]).sum() for a in range(self.ds.aspect_count)))\n",
         "                        phi_score_aa = torch.tensor(phi_score_aa).to(dev)\n",
-        "                        theta_score_aa = thetas.sum(dim=0) # sum across words, keep aspects dim\n",
+        "                        theta_score_aa = sen_thetas.sum(dim=0) # sum across words, keep aspects dim\n",
         "\n",
         "                        aspect_pred = int(torch.argmax(torch.nn.functional.softmax(theta_score_aa + phi_score_aa, dim=-1)).item())\n",
         "\n",
         "                        # sentence likelihood (6)\n",
         "                        aspect_rating = review_aspects_scores[aspect_pred]\n",
-        "                        theta_score_ll = thetas[:, aspect_pred].sum()\n",
-        "                        phi_score_ll = phis[aspect_pred][:, aspect_rating].sum()\n",
+        "                        theta_score_ll = sen_thetas[:, aspect_pred].sum()\n",
+        "                        phi_score_ll = sen_phis[aspect_pred][:, aspect_rating].sum()\n",
         "\n",
         "                        ll = torch.log(theta_score_ll + phi_score_ll)\n",
         "                        sentence_ll_losses.append(-ll)\n",
@@ -563,7 +561,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -574,7 +572,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 28,
+      "execution_count": 11,
       "outputs": []
     },
     {
