--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -59,7 +59,7 @@
         },
         "outputId": "db677126-945f-4b3e-befe-d70aa46753de"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
         "id": "B_QTo-xBCelp",
         "outputId": "4ee4deb5-deb9-4740-a78e-f7af77123bc8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +378,7 @@
         },
         "outputId": "5059cf21-9267-4d3b-d0a2-a8f90cdeabcc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,16 +477,11 @@
         "        self.phis  = torch.load(f'src_path-phis')\n",
         "    \n",
         "\n",
-        "    # def linear_assignement(self, rev_sens, rev_scores):\n",
-        "    #     costs = np.zero(shape=(len(rev_sens), self.ds.aspect_count))\n",
-        "\n",
-        "    #     for k in range(self.ds.aspect_count):\n",
-        "    #         # \n",
-        "    #     linear_sum_assignment(costs)\n",
+        "    def _linear_assignement(self, costs):\n",
+        "        return linear_sum_assignment(costs, maximize=True)\n",
         "    \n",
-        "    \n",
-        "    # def sentence_likelihood(self, sen_ids): # TODO remove?\n",
-        "    #   pass\n",
+        "    def aspecs_assignments(self):\n",
+        "        pass\n",
         "    \n",
         "    def train(self, epoch_count=1):\n",
         "        train_size = int(0.8 * len(self.ds))\n",
@@ -502,6 +497,18 @@
         "                    rev_thetas = self.rev_words_thetas(rev_sents_ids)\n",
         "                    rev_phis   = self.rev_words_phis(rev_sents_ids)\n",
         "                    sentence_ll_losses = []\n",
+        "                    res_sents_scores = torch.stack(\n",
+        "                        [\n",
+        "                         rev_thetas[j].sum(dim=0) + torch.tensor(tuple(rev_phis[j][a][:, review_aspects_scores[a]].sum() for a in range(self.ds.aspect_count))) # 1 x aspect count\n",
+        "                         for j in range(len(rev_sents_ids))\n",
+        "                        ],\n",
+        "                    ) # sent count x aspect count\n",
+        "                    sents_aspect_preds_max = torch.argmax(res_sents_scores, dim=1)\n",
+        "                    row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
+        "                    sents_aspect_preds_linear = sents_aspect_preds_max\n",
+        "                    \n",
+        "                    sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind)\n",
+        "                    \n",
         "                    for j in range(len(rev_sents_ids)):\n",
         "                        sen_thetas = rev_thetas[j]\n",
         "                        sen_phis   = rev_phis[j]\n",
@@ -511,7 +518,7 @@
         "                        phi_score_aa = torch.tensor(phi_score_aa).to(dev)\n",
         "                        theta_score_aa = sen_thetas.sum(dim=0) # sum across words, keep aspects dim\n",
         "\n",
-        "                        aspect_pred = int(torch.argmax(torch.nn.functional.softmax(theta_score_aa + phi_score_aa, dim=-1)).item())\n",
+        "                        aspect_pred = sents_aspect_preds_linear[j]\n",
         "\n",
         "                        # sentence likelihood (6)\n",
         "                        aspect_rating = review_aspects_scores[aspect_pred]\n",
@@ -548,20 +555,12 @@
         "        except KeyboardInterrupt:\n",
         "            print('Interrupted.')\n",
         "        except Exception as e:\n",
-        "            raise e\n",
-        "        \n",
-        "\n",
-        "    # def sentence_aspects_likelihood(sen_ids): # TODO not needed?\n",
-        "    #     theta_score = sentence_aspects_likelihood_theta(sen_ids)\n",
-        "    #     phi_scores = sentence_aspects_likelihood_phi(sen_ids)\n",
-        "    #     ic(theta_score, phi_scores)\n",
-        "        # score = torch.exp( + sentence_aspects_likelihood_phi(sen_ids, ratings))\n",
-        "        # return score / score.sum()\n"
+        "            raise e\n"
       ],
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 10,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -572,7 +571,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 11,
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -592,7 +591,7 @@
         ""
       ],
       "metadata": {
-        "id": "5bAzkDZ7eQZ4"
+        "id": "RKLyp4wxFnoF"
       },
       "execution_count": null,
       "outputs": []
