Fix: move tensors to CUDA where needed

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -57,15 +58,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db677126-945f-4b3e-befe-d70aa46753de"
+        "outputId": "70f9ea9f-5306-49f5-f279-17ab8c3e584a"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "dev = cpu\n"
+            "dev = cuda\n"
           ]
         }
       ]
@@ -79,7 +80,7 @@
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -301,7 +302,7 @@
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -331,13 +332,13 @@
         "fi"
       ],
       "metadata": {
+        "id": "B_QTo-xBCelp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "B_QTo-xBCelp",
-        "outputId": "4ee4deb5-deb9-4740-a78e-f7af77123bc8"
+        "outputId": "e4b485ef-f0c1-43e2-9947-d57ddb82419c"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,7 +347,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j\n",
             "To: /content/ratebeer.pickle\n",
-            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  1%|1         | 4.72M/322M [00:00<00:22, 14.2MB/s]\r  7%|7         | 24.1M/322M [00:00<00:15, 19.6MB/s]\r 11%|#         | 34.1M/322M [00:00<00:12, 22.5MB/s]\r 16%|#5        | 50.9M/322M [00:00<00:08, 30.3MB/s]\r 21%|##1       | 67.6M/322M [00:01<00:07, 34.3MB/s]\r 28%|##8       | 90.2M/322M [00:01<00:05, 46.0MB/s]\r 32%|###1      | 102M/322M [00:01<00:05, 43.7MB/s] \r 38%|###8      | 124M/322M [00:01<00:03, 57.4MB/s]\r 43%|####2     | 137M/322M [00:01<00:03, 52.6MB/s]\r 49%|####8     | 156M/322M [00:02<00:02, 67.3MB/s]\r 53%|#####2    | 169M/322M [00:02<00:02, 57.2MB/s]\r 60%|######    | 193M/322M [00:02<00:01, 74.2MB/s]\r 65%|######4   | 208M/322M [00:02<00:01, 58.7MB/s]\r 68%|######8   | 220M/322M [00:03<00:01, 56.1MB/s]\r 73%|#######3  | 235M/322M [00:03<00:01, 62.1MB/s]\r 76%|#######6  | 245M/322M [00:03<00:01, 52.7MB/s]\r 81%|########  | 261M/322M [00:03<00:00, 65.7MB/s]\r 86%|########6 | 277M/322M [00:03<00:00, 72.4MB/s]\r 92%|#########2| 297M/322M [00:03<00:00, 89.4MB/s]\r 97%|#########6| 311M/322M [00:04<00:00, 82.3MB/s]\r100%|##########| 322M/322M [00:04<00:00, 77.8MB/s]\n"
+            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  2%|1         | 5.77M/322M [00:00<00:05, 56.7MB/s]\r  9%|8         | 28.8M/322M [00:00<00:04, 73.2MB/s]\r 17%|#6        | 53.5M/322M [00:00<00:02, 92.7MB/s]\r 23%|##3       | 75.0M/322M [00:00<00:02, 112MB/s] \r 31%|###1      | 101M/322M [00:00<00:01, 134MB/s] \r 39%|###8      | 125M/322M [00:00<00:01, 154MB/s]\r 45%|####4     | 145M/322M [00:00<00:01, 147MB/s]\r 51%|#####     | 164M/322M [00:00<00:01, 157MB/s]\r 57%|#####7    | 184M/322M [00:00<00:00, 168MB/s]\r 64%|######3   | 204M/322M [00:01<00:00, 177MB/s]\r 70%|#######   | 225M/322M [00:01<00:00, 185MB/s]\r 77%|#######6  | 247M/322M [00:01<00:00, 193MB/s]\r 84%|########3 | 270M/322M [00:01<00:00, 201MB/s]\r 92%|#########1| 295M/322M [00:01<00:00, 214MB/s]\r100%|#########9| 321M/322M [00:01<00:00, 226MB/s]\r100%|##########| 322M/322M [00:01<00:00, 203MB/s]\n"
           ]
         }
       ]
@@ -376,9 +377,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5059cf21-9267-4d3b-d0a2-a8f90cdeabcc"
+        "outputId": "15624fd1-5ea7-4319-ae9f-bf05f78850e3"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +402,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RZ0p4rxp2UJE",
-        "outputId": "bcdb809d-9f8d-4e35-c583-efd848b0f032"
+        "outputId": "73fce1de-bb56-43ad-9c16-9477465761e5"
       },
       "execution_count": null,
       "outputs": [
@@ -499,7 +500,7 @@
         "                    sentence_ll_losses = []\n",
         "                    res_sents_scores = torch.stack(\n",
         "                        [\n",
-        "                         rev_thetas[j].sum(dim=0) + torch.tensor(tuple(rev_phis[j][a][:, review_aspects_scores[a]].sum() for a in range(self.ds.aspect_count))) # 1 x aspect count\n",
+        "                         rev_thetas[j].sum(dim=0) + torch.tensor(tuple(rev_phis[j][a][:, review_aspects_scores[a]].sum() for a in range(self.ds.aspect_count))).to(dev) # 1 x aspect count\n",
         "                         for j in range(len(rev_sents_ids))\n",
         "                        ],\n",
         "                    ) # sent count x aspect count\n",
@@ -507,7 +508,7 @@
         "                    row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
         "                    sents_aspect_preds_linear = sents_aspect_preds_max\n",
         "                    \n",
-        "                    sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind)\n",
+        "                    sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
         "                    \n",
         "                    for j in range(len(rev_sents_ids)):\n",
         "                        sen_thetas = rev_thetas[j]\n",
@@ -560,7 +561,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 137,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -571,7 +572,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 138,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -591,7 +592,7 @@
         ""
       ],
       "metadata": {
-        "id": "RKLyp4wxFnoF"
+        "id": "jrufTbQ9G3t-"
       },
       "execution_count": null,
       "outputs": []
